<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">旅Agent</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="inputEmail">Email</string>
    <string name="inputPassword">Password</string>
    <string name="inputSearch">Input a place</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="prompt_email">Email（必要）</string>
    <string name="prompt_password">Password（必要）</string>
    <string name="prompt_confirmPassword">Confirm password（必要）</string>
    <string name="prompt_nickname">Nickname（必要）</string>
    <string name="prompt_name">Your Name</string>
    <string name="prompt_country">Your Country</string>
    <string name="prompt_city">Your City</string>
    <string name="prompt_gender">Your gender</string>
    <string name="clear_cache_menu">Clear Caches</string>
    <string name="clear_cache_complete">Caches have been cleared</string>
    <string name="imageview_description">Image Thumbnail</string>
    <string name="title_activity_camera">CameraActivity</string>

</resources>